[tool.poetry]
name = "knock"
version = "0.1.0"
description = ""
authors = ["gyuchan <schk9611@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.4"
djangorestframework = "^3.14.0"
mysqlclient = "^2.1.1"
django-dotenv = "^1.4.2"
selenium = "3.14.1"
djangorestframework-simplejwt = "^5.2.2"
pillow = "^9.3.0"
django-allauth = "^0.51.0"
dj-rest-auth = "^2.2.5"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylink = "^0.3.3"
drf-yasg = "^1.21.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
